# Creative

./: README.md
MAT200C/p5js/: .gitignore  global.d.ts  package-lock.json  package.json
MAT200C/p5js/sketches/anemic_cinema/: index.html  sketch.ts
MAT200C/p5js/sketches/inky_wireframe/: index.html  inky.frag  inky.vert  sketch.ts
MAT200C/p5js/sketches/random_fractals/: sketch.ts
MAT200C/p5js/sketches/schotter/: index.html  shader.frag  shader.vert  sketch.ts  tsconfig.json
MAT240B/RustAudioTest/: Cargo.toml  README.md
MAT240B/RustAudioTest/src/: audio_function.rs  const_generics_tools.rs  lib.rs  math.rs  simple_audio.rs  wav_recording.rs
MAT240B/SchoffhauzerSynth/: Cargo.toml  Makefile.toml
MAT240B/SchoffhauzerSynth/src/: derive_alias.rs  lib.rs  params.rs  save_state.rs
MAT240B/SchoffhauzerSynth/src/synth/: mod.rs  poly_synth.rs  synth.rs
MAT240B/SchoffhauzerSynth/src/utils/: db.rs  envelope.rs  fallback.rs  midi_note.rs  mod.rs  modulated.rs
