[package]
name = "schoffhauzer_synth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "95e3803850f6c9b3b960791f60a5358ef2b19e27" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "95e3803850f6c9b3b960791f60a5358ef2b19e27", features = [
    "clack-plugin",
    "all-extensions",
    "raw-window-handle_06"
] }

baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3" }
egui-baseview = { git = "https://codeberg.org/BillyDM/egui-baseview.git", rev = "754b8888d41a19a3a710587014c7279941d07b5b" }
raw-window-handle = "0.6.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
static_assertions = "1.1.0"
num-traits = "0.2.19"
derive_more = { version = "2.1.1", features = ["full"] }
derive_aliases = "0.4.7"
repetitive = { version = "0.3.2", default-features = false, features = [] }

[dev-dependencies]
cargo-make = "0.37.24"